--- a/app.json
+++ b/app.json
@@ -7,21 +7,21 @@
         "pages/making/making",
         "pages/results/results"
     ],
-
     "window": {
         "backgroundTextStyle": "light",
         "navigationBarBackgroundColor": "#fff",
         "navigationBarTitleText": "麻辣短句",
         "navigationBarTextStyle": "black"
     },
-
-    "navigateToMiniProgramAppIdList":["wx6a739cc11cae398a","wxa9889cbb49d3e5d3","wxffec6b164990d505"],
-
+    
+    "navigateToMiniProgramAppIdList": [
+        "wx6a739cc11cae398a",
+        "wxa9889cbb49d3e5d3",
+        "wxffec6b164990d505"
+    ],
     "networkTimeout": {
         "request": 20000
     },
-
     "debug": false,
-
     "sitemapLocation": "sitemap.json"
 }
